--- a/lin.yaml
+++ b/lin.yaml
@@ -1,31 +1,30 @@
-LINGALA : DRC_mobile
+internalName: lingala
 
-supportedtargets : ios, android
+displayNames:
+  en:  Lingala
+  lin: Lingala
 
-modes : 
+locale: lin
 
-mobile-default : 
+supportedTargets: [ios, android]
 
-a e b r t y u i o p ?
- s m f g h n k l mb ?
-  z c v w j d nd gb
+modes:
+  mobile-default: |
+    a e b r t y u i o p ?
+     s m f g h n k l mb ?
+      z c v w j d nd gb
+  mobile-shift: |
+    A E B R T Y U I O P ?
+     S M F G H N K L Mb ?
+       Z C V W J D Nd Gb  
 
-mobile-shift :
-A E B R T Y U I O P ?
- S M F G H N K L Mb ?
-   Z C V W J D Nd Gb  
-
-longpress : 
-a : á â a
-e : é ê e
-i :  í î i 
-k : kp
-m : mp
-n : ng nk ns nt 
-o : ó ô o
-u : ú 
-? : ?´ ?^ ??
-? : ?´ ?^ ??
-
- 
-
+longpress: 
+  a: á â a
+  e: é ê e
+  i: í î i 
+  k: kp
+  m: mp
+  n: ng nk ns nt 
+  o: ó ô o
+  u: ú 
+  '?': ?´ ?^ ??
